@@ -1,5 +1,11 @@
 2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-map.c (pk_map_normalize_name): New function.
+	(pk_map_load_file): Use pk_map_normalize_name.
+	* poke/pk-cmd-map.c (pk_cmd_map_create): Likewise.
+
+2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/poke.c: Make poke_prompt_maps_p to default to yes.
 	* poke/pk-ios.c (pk_open_ios): Do not emit an "auto-map: loaded"
 	message if prompt-maps is enabled.
